                    - clone()
                    - _clone_object()
                    - _clone_custom_values()
                    - _clone_m2m()
                    - _copy_properties()
                    - _copy_relations()
                    - _pre_save_clone()
                    - _post_clone()
                    - _post_save_clone()
            - The method 'creme_core.tests.base._CremeTestCase.assertRelationCount' is deprecated;
              use the new methods 'assertHaveRelation()' & 'assertHaveNoRelation()' instead.
            - In 'creme_core.templatetags' :
                - In the module "creme_core_tags", the argument "callback_url" of '{% inner_edition_uri %}' is deprecated.
                - In the module "creme_ctype" :
                    - The tag "{% ctype_for_model %}" is deprecated; use the filter "|ctype_for_instance" instead.
                    - The tag "{% ctype_for_swappable %}" is deprecated; use the filter "|ctype_for_swappable" instead.
                    - The tag "{% ctype_counted_instances_label %}" is deprecated; use the filter "|ctype_counted_label" instead.
            - App :
                * Persons :
                    - The method 'models.base.PersonWithAddressesMixin._post_save_clone()' is deprecated.
                * Activities :
                    - The constants 'NARROW', 'FLOATING_TIME' & 'FLOATING' are now deprecated;
                      use 'Activity.FloatingType.*' instead.
                * Billing :
                    - The module 'registry' is deprecated.
                    - The class 'views.base.BaseCreation' is deprecated.
                * Projects :
                    - The method 'models.AbstractProjectTask.clone_scope()' is deprecated.
        # In 'creme_core.models' :
            - The models 'CremeUser' gets a new method 'has_perm_or_die()' which raises exceptions with friendly error messages.
            - The model 'FileRef' gets a new optional field "description";